@startuml
hide empty description

state Inactive
state Active
state Ended
state Cancelled
state Invalid

[*] --> Inactive
Inactive --> Inactive : Activate [No Options Inserted]
Inactive --> Active : Activate [Options Inserted]
Inactive --l> Cancelled : Cancel
Active --> Cancelled : Cancel
Active --> Ended : Automatic or Manual Ending
Ended --> Invalid : No Eligible Winner

@enduml
